# miro_cqrs_generator

./: README.md  pyproject.toml
miro_cqrs/: generator.py
tests/: test_miro_cqrs.py
