[tool.poetry]
name = "miro-cqrs"
version = "0.1.0"
description = ""
authors = ["scottming <therealscottming@gmail.com>"]

[tool.poetry.dependencies]
requests = "2.28.1."
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
